chore(aws sns) add FIFO Topic support